[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lor_xlu"
version = "0.0.4"
authors = [
  { name="Xinjiang Lu", email="xinjiang.lu@gmail.com" },
]
description = "An SDK to explore the Lord of Rings API system"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"requests"
]

[project.urls]
"Homepage" = "https://github.com/xjlu/xinjiang-sdk"
"Bug Tracker" = "https://github.com/pypa/xinjiang-sdk/issues"
